--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-insta-stories": "^2.4.2",
     "react-player": "^2.11.0",
     "react-router-dom": "^6.7.0",
-    "swiper": "^8.4.6"
+    "swiper": "^8.4.6",
+    "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
